--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <h1>Hola desde html</h1>
+  <h2>te quiero mucho</h2>
+  <h3>hola hola1</h3>
+  <h4>agregamos un h4 </h4>
 </body>
 </html>
