--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nuevo Titulo</title>
 </head>
 <body>
   <h1>Hola desde html</h1>
   <h2>te quiero mucho</h2>
   <h3>hola hola1</h3>
   <h4>agregamos un h4 </h4>
+  
 </body>
 </html>
